# kazu-rs

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md
crates/bdmc-rs/: Cargo.toml
crates/bdmc-rs/src/: cmds.rs  controller.rs  lib.rs  ports.rs
crates/mentabotix-rs/: Cargo.toml  demo_branching.puml
crates/mentabotix-rs/src/: botix.rs  composer.rs  export.rs  helpers.rs  lib.rs  menta.rs  registry.rs  state.rs  transition.rs
crates/mentabotix-rs/src/botix/: graph.rs  mod.rs
crates/mentabotix-rs/src/state/: mod.rs  movement.rs
crates/upic-rs/: Cargo.toml
crates/upic-rs/src/: lib.rs  tag_detector.rs
crates/upic-rs/src/tag_detector/: bench.rs  config.rs  mod.rs
crates/uptechstar-rs/: Cargo.toml  build.rs
crates/uptechstar-rs/src/: emulation.rs  ffi.rs  lib.rs  pins.rs  screen.rs  sensors.rs
src/: assembly.rs  cli.rs  compile.rs  config.rs  constant.rs  judgers.rs  main.rs  signal_light.rs  static_utils.rs
src/commands/: bench.rs  breaker.rs  check.rs  cmd.rs  config.rs  light.rs  mod.rs  msg.rs  ports.rs  read.rs  record.rs  run.rs  tag.rs  viz.rs
src/compile/: battle.rs  edge.rs  fence.rs  mod.rs  navigation.rs  scan.rs  stage.rs  surrounding.rs
src/config/: behavior.rs  hardware.rs  mod.rs  stage.rs
src/config/behavior/: edge.rs  fence.rs  mod.rs  search.rs  surrounding.rs  tag_group.rs
src/judgers/: align.rs  edge.rs  fence.rs  misc.rs  mod.rs  stage.rs  surrounding.rs
