[package]
name = "kazu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
figment = { version = "0.10.19", features = ["env", "toml"] }
indicatif = "0.18.4"
log = "0.4.29"
rayon = "1.12.0"
toml = "1.1.2"

bdmc-rs = { path = "crates/bdmc-rs" }
upic-rs = { path = "crates/upic-rs" }
mentabotix-rs = { path = "crates/mentabotix-rs" }
uptechstar-rs = { path = "crates/uptechstar-rs" }


[workspace]
members = [
    "crates/*"
]
