[package]
name = "kazu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
indicatif = "0.18.4"
log = "0.4.29"
rayon = "1.12.0"
toml = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
serialport = "4.9.0"

bdmc-rs = { path = "crates/bdmc-rs" }
upic-rs = { path = "crates/upic-rs", optional = true }
mentabotix-rs = { path = "crates/mentabotix-rs" }
uptechstar-rs = { path = "crates/uptechstar-rs" }

[features]
default = []
vision = ["upic-rs"]


[workspace]
members = [
    "crates/*"
]
